--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="personal-data">
             <div class="profile">
                 <div class="avatar">
-                    <img src="./resources/avatar.png" class="img-height-fill round">
+                    <img src="./resources/avatar.jpg" class="img-height-fill round">
                 </div>
                 <h1 id="fullname" class="text-cut select-none"></h1>
                 <p id="profession" class="text-cut select-none"></p>
