organized html locations and removed music autoplay

--- a/loli.html
+++ b/loli.html
@@ -2,11 +2,10 @@
 <html lang="es">
 
 <head>
-    <title>Facebluff</title>
+    <title>loli</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="../resources/icon/logo.png" />
-    <link rel="stylesheet" href="../css/utils.css" />
-    <link rel="stylesheet" href="../css/loli.css" />
+    <link rel="stylesheet" href="./css/utils.css" />
+    <link rel="stylesheet" href="./css/loli.css" />
 </head>
 
 <body style="background-color: black">
@@ -72,10 +71,9 @@
                 <span class="music-note" id="two">&#9834;</span>
             </div>
             <div>
-                <iframe src="../resources/music/silence.mp3" allow="autoplay"></iframe>
-                <audio controls autoplay loop>
-                    <source src="../resources/music/kokoronashi.mp3" type="audio/mpeg">
-                    <source src="../resources/music/kokoronashi.ogg" type="audio/ogg">
+                <audio controls loop>
+                    <source src="./resources/music/kokoronashi.mp3" type="audio/mpeg">
+                    <source src="./resources/music/kokoronashi.ogg" type="audio/ogg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
